# vigil

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release-msi.yml
docs/: AGENT.md  ARCHITECTURE.md  CHECKS.md  HUB.md  INSTALLER.md  NOTIFICATIONS.md  OAUTH.md  QUICKSTART.md  README.md  notification-payloads.md
scripts/: hub-watchdog.sh  sign-release.sh  watchdog-install.sh  watchdog.service  watchdog.timer
vigil-agent/: Cargo.toml  Dockerfile  config.example.toml
vigil-agent/src/: buffer.rs  config.rs  doctor.rs  enroll.rs  hub_client.rs  installer.rs  inventory.rs  ipc.rs  ipc_client.rs  lib.rs  main.rs  net_safety.rs  resource_sampler.rs  result_signing.rs  updater.rs  windows_service.rs
vigil-agent/src/monitors/: cert.rs  event_log.rs  http.rs  logfile.rs  mod.rs  ping.rs  port.rs  process.rs  resource.rs  service.rs
vigil-agent/tests/: ipc_smoke.rs  path_resolution.rs
vigil-agent/wix/: main.wxs
vigil-hub/: .gitignore  Dockerfile  middleware.ts  next.config.ts  package.json  playwright.config.ts  server.ts
vigil-hub/app/: globals.css  layout.tsx  page.tsx
vigil-hub/app/(auth)/login/: page.tsx
vigil-hub/app/(auth)/setup/: page.tsx
vigil-hub/app/(dashboard)/: layout.tsx
vigil-hub/app/(dashboard)/admin/agent-releases/: page.tsx
vigil-hub/app/(dashboard)/admin/audit/: page.tsx
vigil-hub/app/(dashboard)/admin/integrations/: page.tsx
vigil-hub/app/(dashboard)/admin/integrations/[kind]/: page.tsx
vigil-hub/app/(dashboard)/admin/rollouts/: page.tsx
vigil-hub/app/(dashboard)/admin/rollouts/[id]/: page.tsx
vigil-hub/app/(dashboard)/admin/system/: page.tsx
vigil-hub/app/(dashboard)/admin/users/: page.tsx
vigil-hub/app/(dashboard)/agents/: page.tsx
vigil-hub/app/(dashboard)/agents/[id]/: page.tsx
vigil-hub/app/(dashboard)/alerts/: page.tsx
vigil-hub/app/(dashboard)/certificates/: page.tsx
vigil-hub/app/(dashboard)/checks/: page.tsx
vigil-hub/app/(dashboard)/dashboard/: page.tsx
vigil-hub/app/(dashboard)/expiry/: page.tsx
vigil-hub/app/(dashboard)/monitors/: page.tsx
vigil-hub/app/(dashboard)/profile/: api-keys-tab.tsx  general-tab.tsx  notifications-tab.tsx  page.tsx  profile-types.ts  security-tab.tsx  sessions-tab.tsx
vigil-hub/app/(dashboard)/settings/: page.tsx
vigil-hub/app/(dashboard)/settings/updates/: page.tsx
vigil-hub/app/api/admin/agent-releases/: route.ts
vigil-hub/app/api/admin/agent-releases/[id]/: route.ts
vigil-hub/app/api/admin/agent-releases/upload/: route.ts
vigil-hub/app/api/admin/audit/: route.ts
vigil-hub/app/api/admin/audit/export/: route.ts
vigil-hub/app/api/admin/integrations/: route.ts
vigil-hub/app/api/admin/rollouts/: route.ts
vigil-hub/app/api/admin/rollouts/[id]/: route.ts
vigil-hub/app/api/admin/users/: route.ts
vigil-hub/app/api/agents/: route.ts
vigil-hub/app/api/agents/[id]/: route.ts
vigil-hub/app/api/alerts/: route.ts
vigil-hub/app/api/azure-kv/: route.ts
vigil-hub/app/api/azure-kv/test/: route.ts
vigil-hub/app/api/certs/: route.ts
vigil-hub/app/api/certs/[id]/: route.ts
vigil-hub/app/api/certs/check/: route.ts
vigil-hub/app/api/checks/: route.ts
vigil-hub/app/api/checks/[id]/: route.ts
vigil-hub/app/api/enroll/: route.ts
vigil-hub/app/api/enrollment/: route.ts
vigil-hub/app/api/expiry-monitors/: route.ts
vigil-hub/app/api/expiry-monitors/[id]/: route.ts
vigil-hub/app/api/expiry-monitors/check/: route.ts
vigil-hub/app/api/health/: route.ts
vigil-hub/app/api/incidents/: route.ts
vigil-hub/app/api/monitors/: route.ts
vigil-hub/app/api/overview/expiry-radar/: route.ts
vigil-hub/app/api/overview/kpis/: route.ts
vigil-hub/app/api/overview/top-offenders/: route.ts
vigil-hub/app/api/profile/: route.ts
vigil-hub/app/api/profile/api-keys/: route.ts
vigil-hub/app/api/profile/password/: route.ts
vigil-hub/app/api/profile/sessions/: route.ts
vigil-hub/app/api/results/: route.ts
vigil-hub/app/api/search-index/: route.ts
vigil-hub/app/api/settings/: route.ts
vigil-hub/app/api/settings/oauth/: route.ts
vigil-hub/app/api/settings/test/: route.ts
vigil-hub/app/api/setup/: route.ts
vigil-hub/app/api/setup/status/: route.ts
vigil-hub/app/api/sse/: route.ts
vigil-hub/app/api/test/[channel]/: route.ts
vigil-hub/app/api/users/: route.ts
vigil-hub/app/api/users/invite/: route.ts
vigil-hub/components/: avatar-menu.tsx  command-palette.tsx  notifications-tray.tsx  providers.tsx
vigil-hub/components/monitors/: create-wizard.tsx  latency-histogram.tsx  monitor-detail-drawer.tsx  monitors-grid.tsx  monitors-table.tsx  silence-picker.tsx  status-timeline-chart.tsx  type-icon.tsx
vigil-hub/components/overview/: expiry-radar.tsx  fleet-strip.tsx  health-banner.tsx  incident-feed.tsx  kpi-card.tsx  kpi-row.tsx  overview-page-client.tsx  sparkline.tsx  top-offenders.tsx
vigil-hub/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  data-table.tsx  empty-state.tsx  skeleton.tsx  toast-provider.tsx
vigil-hub/hooks/: use-command-palette.ts  use-sse.ts
vigil-hub/lib/: admin-audit-filters.ts  alert-engine.ts  api-tokens.ts  audit.ts  auth-client.ts  auth.ts  authz.ts  azure-kv.ts  cert-monitor.ts  encryption.ts  expiry-monitor.ts  integrations.ts  monitors.ts  notification-events.ts  query-client.ts  redact.ts  release-signing.ts  rollout-runner.ts  rollout-target.ts  session.ts  signature-verify.ts  status.ts  system-metrics.ts  theme.ts  url-safety.ts  user-agent.ts  ws-server.ts
vigil-hub/lib/notifications/: discord.ts  dispatcher.ts  generic.ts  slack.ts  smtp.ts  teams.ts  telegram.ts  twilio.ts  types.ts
vigil-hub/prisma/: schema.prisma
vigil-hub/scripts/: synthetic-alert.ts  synthetic-tamper.ts
vigil-hub/tests/: signature-verify.test.mjs
vigil-hub/tests/e2e/: smoke.spec.ts
vigil-hub/tests/e2e/fixtures/: auth.setup.ts
vigil-tray/: Cargo.toml  README.md  build.rs
vigil-tray/assets/hud/: index.html  wizard.html
vigil-tray/src/: autostart.rs  hud.rs  ipc_client.rs  main.rs  menu.rs  state.rs  wizard.rs
(+32 files in other folders)
