[package]
name = "vigil-agent"
version = "0.1.0"
edition = "2021"
description = "Vigil server monitoring agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
ring = "0.17"
hex = "0.4"
sha2 = "0.10"
webpki-roots = "0.26"
x509-parser = "0.16"
