[package]
name = "vigil-agent"
version = "0.3.0-dev"
edition = "2021"
description = "Vigil server monitoring agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
ring = "0.17"
hex = "0.4"
sha2 = "0.10"
webpki-roots = "0.26"
x509-parser = "0.16"
once_cell = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"
