[package]
name = "vigil-agent"
version = "0.3.2"
edition = "2021"
description = "Vigil server monitoring agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# `ring` feature is required so we can install ring as the rustls crypto
# provider in main(). Default provider (aws-lc-rs) needs a C compile step
# that's fiddly on Windows cross-builds.
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
ring = "0.17"
hex = "0.4"
sha2 = "0.10"
webpki-roots = "0.26"
x509-parser = "0.16"
once_cell = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"

# Windows Installer (MSI) metadata, consumed by `cargo wix`. The GUIDs below
# are pinned for the lifetime of this product — never regenerate them, or
# existing installs will fail to upgrade in-place and end up as duplicate
# entries in Add/Remove Programs.
#
# Layout produced by the MSI (see wix/main.wxs):
#   C:\Program Files\Vigil\        — vigil-agent.exe, vigil-tray.exe (read-only)
#   C:\ProgramData\Vigil\          — config.toml, vigil-buffer.db, agent.log
[package.metadata.wix]
upgrade-guid = "3f12f714-be1c-4f0d-ad29-3c5729e681cf"
path-guid    = "7bfecd6e-03ac-41f2-98e9-8f0612310788"
license      = false
eula         = false
# Note: cargo-wix automatically passes `-ext WixUtilExtension` and
# `-ext WixUIExtension` to both candle and light by default, so the
# EnrollAgent custom action's use of WixQuietExec64 works without any
# manual `compiler-args` / `linker-args` declaration here.
